--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,26 @@ body {
     margin-right: auto;
     width: 768px;
 }
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    height: 50px;
+}
+
+header a {
+    padding: 0 50px;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+}
