--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,18 @@ header a {
     margin: 0 0 5px 10px;
 }
 
+main address {
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
 footer {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 50px;
+}
+
+footer span {
+    text-align: center;
 }
