--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@ header a {
     margin: 0 0 5px 10px;
 }
 
+.foto2 {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
 main address {
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
